cant really manage git XD
