# internal/handler/users.go
@@ -6,39 +6,11 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary GetProfile
+// @Summary GetUserByID
 // @Security ApiKeyAuth
 // @Tags users
-// @Description Get Your Profile
-// @ID get-profile
-// @Accept  json
-// @Produce  json
-// @Success 200 {object} models.User
-// @Failure 400,404 {object} Response
-// @Failure 500 {object} Response
-// @Failure default {object} Response
-// @Router /api/users/profile [get]
-func (h *Handler) getProfile(c *gin.Context) {
-	id, err := getUserId(c)
-	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	user, err := h.services.User.GetUserByID(id)
-	if err != nil {
-		newErrorResponse(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	c.JSON(http.StatusOK, user)
-}
-
-// @Summary GetUserProfile
-// @Security ApiKeyAuth
-// @Tags users
-// @Description Get User Profile
-// @ID get-user-profile
+// @Description Get User By ID
+// @ID get-user-by-ID
 // @Accept  json
 // @Produce  json
 // @Param id path int true "UserID"
@@ -47,14 +19,14 @@ func (h *Handler) getProfile(c *gin.Context) {
 // @Failure 500 {object} Response
 // @Failure default {object} Response
 // @Router /api/users/{id} [get]
-func (h *Handler) getUserProfile(c *gin.Context) {
-	id, err := parseId(c)
+func (h *Handler) getUserByID(c *gin.Context) {
+	userId, err := parseId(c)
 	if err != nil {
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	user, err := h.services.User.GetUserByID(id)
+	user, err := h.services.User.GetUserByID(userId)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
@@ -76,7 +48,7 @@ func (h *Handler) getUserProfile(c *gin.Context) {
 // @Failure default {object} Response
 // @Router /api/users/ [get]
 func (h *Handler) listUsers(c *gin.Context) {
-	user, err := h.services.User.GetAllUsers()
+	user, err := h.services.User.ListUsers()
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
